# alfalfa-notebooks

./: .gitignore  README.md  demo.ipynb  end_use_loads_alfalfa.ipynb  enduseprofiles.ipynb  pyproject.toml  simple_run.ipynb  twobldgs.ipynb  urbanopt_to_alfalfa.ipynb
.github/workflows/: develop.yml  main.yml
example_urbanopt_project/measures/alfalfa_vars/: measure.rb  measure.xml
example_urbanopt_project/run/example_urbanopt_scenario/1/: in.osm
example_urbanopt_project/run/example_urbanopt_scenario/2/: in.osm
example_urbanopt_project/run/example_urbanopt_scenario/3/: in.osm
example_urbanopt_project/run/example_urbanopt_scenario/62/: in.osm
example_urbanopt_project/run/example_urbanopt_scenario/63/: in.osm
models/: README.md
smalloffice/: workflow.osw
smalloffice/measures/example_ep_measure/: measure.rb  measure.xml
smalloffice/measures/example_model_measure/: measure.rb  measure.xml
smalloffice/models/: small_office.osm
twobldgs/: small_office.osw
