[tool.poetry]
name = "cctwin"
version = "0.0.1"
description = ""
authors = ["Anya Petersen <anya.petersen@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.7.1"
# update this after release
#alfalfa-client = "0.1.0.dev7"
alfalfa-client = "~0.3.1"
jupyterlab = "^3.0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
