[tool.poetry]
name = "cctwin"
version = "0.0.1"
description = ""
authors = ["Anya Petersen <anya.petersen@nrel.gov>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# update this after release
alfalfa-client = "0.7.0"
jupyterlab = "^3.0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
